src/test/resources/Parser/SyntaxErrors/WrongNumberOfIdentifiersInFor.front
class A:
    f() {
        arr := new bool?[22];
        for a,b,c : arr {}
    }